# bf-pypy

./: .gitmodules  README.md  pyproject.toml  pypy.pth  setup.py  slide.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
bf/: instruction.py  machine.py  parse.py  program.py  run.py  runjit.py  tape.py  token.py  tokenize.py
scripts/: marp.sh  setup.sh  translate.sh
tests/: mandel.b
translate/: run.py  run2.py
