[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bf"
description = ""
readme = "README.md"
version = "0.1.0"
requires-python = "== 3.10.14"
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy == 1.12.0",
    "ruff == 0.7.0",
]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 120

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
# Inherit rules from pycodestyle, pyflakes, flake8-simplify, isort
select = ["F", "E", "SIM", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = true

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
